added validation rule for one-to-one relationships without remove cascade targeting soft-deleteable entities

--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -204,6 +204,7 @@ MostDslValidator.EntityOptimisticLockingNeedsVersionField=Entitäten mit optimist
 MostDslValidator.EntityOwnerPermissionWithoutStandardFields=Entitäten mit Owner Permissions müssen die Standardfelder aktivieren.
 MostDslValidator.EntitySluggableMustNotIncludeSlugField=Entitäten mit Sluggable-Erweiterung können kein Feld namens slug enthalten.
 MostDslValidator.EntitySluggablePositionsMustBeUnique=Die Werte für die Sluggable-Position müssen eindeutig pro Entität sein.
+MostDslValidator.EntitySoftDeleteableMustNotHaveIncomingOneToOneWithoutRemoveCascade=Entitäten mit Soft-Deleteable-Erweiterung benötigen eine Remove-Kaskade für alle Eins-zu-Eins-Beziehungen.
 MostDslValidator.EntitySoftDeleteableMustNotContainReserved=Entitäten mit Soft-Deleteable-Erweiterung haben zusätzliche Felder
 MostDslValidator.EntitySoftDeleteableMustNotContainReservedField=Daher dürfen Deine Felder diese Namen nicht enthalten.
 MostDslValidator.EntitySoftDeleteableMustNotContainReservedSource=Daher darf Deine Referenz diese Quell-Aliase nicht enthalten.
