--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/QuickfixMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/QuickfixMessages_de.properties
@@ -433,6 +433,7 @@ MostDslQuickfixProvider.UnsetTheMandatoryFlag=Das mandatory-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheNullableFlag=Das nullable-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetThePastFlag=Das past-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetThePrimaryKeyFlag=Das primary key-Flag zurücksetzen
+MostDslQuickfixProvider.UnsetTheSoftDeleteableFlag=Das softdeleteable-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheSortableGroupFlag=Das sortable group-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheSortablePositionFlag=Das sortable position-Flag zurücksetzen
 MostDslQuickfixProvider.UnsetTheStartDateFlag=Das Startdatum-Flag zurücksetzen
