--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -210,6 +210,7 @@ MostDslValidator.EntitySoftDeleteableMustNotContainReservedField=Daher dürfen De
 MostDslValidator.EntitySoftDeleteableMustNotContainReservedSource=Daher darf Deine Referenz diese Quell-Aliase nicht enthalten.
 MostDslValidator.EntitySoftDeleteableMustNotContainReservedTarget=Daher darf Deine Referenz diese Ziel-Aliase nicht enthalten.
 MostDslValidator.EntitySortableFieldMustNotEqualSortableGroup=Die Sortable-Position darf nicht gleichzeitig die Sortable-Gruppe sein.
+MostDslValidator.EntitySortableGroupNeedsSortablePosition=Es wird ein weiteres Feld als Sortable-Position benötigt, damit die Sortable-Gruppe funktioniert.
 MostDslValidator.EntitySortableNeedsOnlyOneFieldForPosition=Nur ein Feld pro Entität kann die Sortable-Position speichern.
 MostDslValidator.EntityStandardFieldsMustNotContainReserved=Entitäten mit Zikula Standardfeldern haben zusätzliche Felder
 MostDslValidator.EntityStandardFieldsMustNotContainReservedField=Daher dürfen Deine Felder diese Namen nicht enthalten.
