--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -27,3 +27,4 @@ marker.check.fast = Most DSL Problem
 marker.check.normal = Most DSL Problem
 marker.check.expensive = Most DSL Problem
 task.name = Most-Task
+task.tags = Task Tags
