added validation rule for ensuring a display pattern contains at least one field reference

--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -88,6 +88,7 @@ MostDslValidator.EntityCategorisableMustNotContainReservedField=Daher dürfen Dei
 MostDslValidator.EntityCategorisableMustNotContainReservedSource=Daher darf Deine Referenz diesen Quell-Alias nicht enthalten.
 MostDslValidator.EntityCategorisableMustNotContainReservedTarget=Daher darf Deine Referenz diesen Ziel-Alias nicht enthalten.
 MostDslValidator.EntityCompositeHasWrongIdentifierStrategy=Composite-Entitäten können als Identifier-Strategie nur NONE haben.
+MostDslValidator.EntityDisplayPatternContainsNoField=Das Anzeigemuster enthält keine Feldreferenzen. Bitte prüfe, ob dies Absicht ist oder nicht.
 MostDslValidator.EntityDoesNotNeedIdFields=Entferne ID-Felder... Du brauchst sie nicht ;-) außer vielleicht Du willst Composite Primary Keys erstellen (Entität: 
 MostDslValidator.EntityDoesNotNeedPrimaryKeyField=Du brauchst ein Feld nicht als primär zu markieren, dies wird automatisch erledigt - außer vielleicht Du willst Composite Primary Keys erstellen.
 MostDslValidator.EntityEventListenerNeedsOperation=Der Listener muss mindestens eine Operation enthalten.
