added new generator setting

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -231,6 +231,8 @@ _UI_SettingsContainer_generatePoweredByBacklinksIntoFooterTemplates_feature = Po
 _UI_SettingsContainer_generatePoweredByBacklinksIntoFooterTemplates_description = Ob die generierten Footer-Templates Backlinks zur ModuleStudio-Homepage beinhalten sollen.
 _UI_SettingsContainer_generateTests_feature = Tests generieren
 _UI_SettingsContainer_generateTests_description = Ob Testf‰lle generiert werden sollen oder nicht.
+_UI_SettingsContainer_writeModelToDocs_feature = Modell in Docs schreiben
+_UI_SettingsContainer_writeModelToDocs_description = Ob die Modelldateien in den docs-Ordner des Moduls oder in ein separates Verzeichnis auﬂerhalb des Moduls geschrieben werden.
 _UI_ReferredApplication_minVersion_feature = Minimale Version
 _UI_ReferredApplication_minVersion_description = Die minimale Version.
 _UI_ReferredApplication_maxVersion_feature = Maximale Version
