added support for ics (iCalendar) templates

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -210,17 +210,19 @@ _UI_SettingsContainer_generateScribitePlugins_description = Ob Unterstützung für
 _UI_SettingsContainer_generateTagSupport_feature = Tag Support generieren
 _UI_SettingsContainer_generateTagSupport_description = Ob der Tag Support generiert werden soll oder nicht. Benötigt User oder Admin Controller mit einer Display-Aktion.
 _UI_SettingsContainer_generateRssTemplates_feature = RSS-Templates generieren
-_UI_SettingsContainer_generateRssTemplates_description = Ob RSS View Templates generiert werden soll oder nicht.
+_UI_SettingsContainer_generateRssTemplates_description = Ob RSS View Templates generiert werden sollen oder nicht.
 _UI_SettingsContainer_generateAtomTemplates_feature = Atom-Templates generieren
-_UI_SettingsContainer_generateAtomTemplates_description = Ob Atom View Templates generiert werden soll oder nicht.
+_UI_SettingsContainer_generateAtomTemplates_description = Ob Atom View Templates generiert werden sollen oder nicht.
 _UI_SettingsContainer_generateCsvTemplates_feature = CSV-Templates generieren
-_UI_SettingsContainer_generateCsvTemplates_description = Ob CSV View Templates generiert werden soll oder nicht.
+_UI_SettingsContainer_generateCsvTemplates_description = Ob CSV View Templates generiert werden sollen oder nicht.
 _UI_SettingsContainer_generateXmlTemplates_feature = XML-Templates generieren
-_UI_SettingsContainer_generateXmlTemplates_description = Ob XML Display und View Templates generiert werden soll oder nicht.
+_UI_SettingsContainer_generateXmlTemplates_description = Ob XML Display und View Templates generiert werden sollen oder nicht.
 _UI_SettingsContainer_generateJsonTemplates_feature = JSON-Templates generieren
-_UI_SettingsContainer_generateJsonTemplates_description = Ob JSON Templates generiert werden soll oder nicht.
+_UI_SettingsContainer_generateJsonTemplates_description = Ob JSON Templates generiert werden sollen oder nicht.
 _UI_SettingsContainer_generateKmlTemplates_feature = KML-Templates generieren
-_UI_SettingsContainer_generateKmlTemplates_description = Ob KML Templates generiert werden soll oder nicht. Benötigt das geographical-Flag bei den entsprechenden Entitäten.
+_UI_SettingsContainer_generateKmlTemplates_description = Ob KML Templates generiert werden sollen oder nicht. Benötigt das geographical-Flag bei den entsprechenden Entitäten.
+_UI_SettingsContainer_generateIcsTemplates_feature = ICS-Templates generieren
+_UI_SettingsContainer_generateIcsTemplates_description = Ob ICS (iCalendar) Templates generiert werden sollen oder nicht. Benötigt Felder für Start- und Enddatum bei den entsprechenden Entitäten.
 _UI_SettingsContainer_generateOnlyBaseClasses_feature = Nur Basisklassen generieren
 _UI_SettingsContainer_generateOnlyBaseClasses_description = Ob nur Basisklassen generiert werden sollen. Kann nützlich sein zur Durchführung einfacher Aktualisierungen ohne strukturelle Änderungen.
 _UI_SettingsContainer_skipFiles_feature = Dateien überspringen
