Added possibility to choose between different array types (for 1.4.0).

--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -451,6 +451,8 @@ _UI_ListFieldItem_default_feature = Standard
 _UI_ListFieldItem_default_description = Ob dieser Eintrag per Standard ausgewählt werden soll oder nicht.
 _UI_ArrayField_length_feature = Länge
 _UI_ArrayField_length_description = Die Länge dieses Feldes.
+_UI_ArrayField_arrayType_feature = Array-Typ
+_UI_ArrayField_arrayType_description = Welcher Array-Typ verwendet wird.
 _UI_AbstractDateField_past_feature = Vergangenheit
 _UI_AbstractDateField_past_description = Ob dieser Wert in der Vergangenheit liegen muss oder nicht.
 _UI_AbstractDateField_future_feature = Zukunft
@@ -706,6 +708,9 @@ _UI_EntityWorkflowType_ENTERPRISE_literal = ENTERPRISE
 _UI_EntitySlugStyle_LOWERCASE_literal = LOWERCASE
 _UI_EntitySlugStyle_UPPERCASE_literal = UPPERCASE
 _UI_EntitySlugStyle_CAMEL_literal = CAMEL
+_UI_ArrayType_ARRAY_literal = ARRAY
+_UI_ArrayType_SIMPLE_ARRAY_literal = SIMPLE_ARRAY
+_UI_ArrayType_JSON_ARRAY_literal = JSON_ARRAY
 _UI_EntityTimestampableType_NONE_literal = NONE
 _UI_EntityTimestampableType_UPDATE_literal = UPDATE
 _UI_EntityTimestampableType_CREATE_literal = CREATE
