added support for database column names different than field names

--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -78,6 +78,14 @@ MostDslValidator.ControllerNeedsAction=Jeder Controller muss mindestens eine Akt
 MostDslValidator.ControllerNeedsContainer=Der Controller muss einem Controller-Container zugewiesen werden.
 MostDslValidator.ControllerNeedsName=Der Controller muss einen Namen haben.
 MostDslValidator.CustomControllersMustBeUnique=Die Namen der eigenen Controller müssen eindeutig sein.
+MostDslValidator.DerivedFieldDbNameIsInvalidIdentifier=Der DB Name muss ein gültiger Bezeichner sein (z. B. keine Leerzeichen oder Sonderzeichen): {0}.
+MostDslValidator.DerivedFieldDbNameMustBeLonger=Der DB Name des Feldes muss eine Länge von mindestens zwei Zeichen haben.
+MostDslValidator.DerivedFieldDbNameMustNotBeReservedZikula=Der DB Name des Feldes ist ein reservierter Bezeichner (
+MostDslValidator.DerivedFieldDbNameMustNotBeReservedSymfony=Der DB Name des Feldes ist ein reservierter Bezeichner (_controller, _method, _locale).
+MostDslValidator.DerivedFieldDbNameMustNotBeReservedWorkflow=Der DB Name des Feldes ist ein reservierter Bezeichner (workflowState).
+MostDslValidator.DerivedFieldDbNameMustNotBeReservedDatabaseKeyword=Der DB Name des Feldes ist ein reserviertes Datenbank-Schlüsselwort.
+MostDslValidator.DerivedFieldDbNameShouldBeLonger=Der DB Name des Feldes sollte eine Länge von mindestens drei Zeichen haben.
+MostDslValidator.DerivedFieldDbNameShouldStartWithLowerCase=Der DB Name des Feldes sollte mit einem Kleinbuchstaben beginnen.
 MostDslValidator.EntitiesMustBeUnique=Die Namen der Entitäten müssen eindeutig sein.
 MostDslValidator.EntityAttributableMustNotContainReserved=Entitäten mit Attributen haben ein zusätzliches Feld zur Referenzierung derselben
 MostDslValidator.EntityAttributableMustNotContainReservedField=Daher dürfen Deine Felder diesen Namen nicht enthalten.
