--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/QuickfixMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/QuickfixMessages_de.properties
@@ -352,6 +352,7 @@ MostDslQuickfixProvider.RemoveAllTransitionsBetweenTheTwoActionsExceptTheFirstOn
 MostDslQuickfixProvider.RemoveAllTransitionsBetweenTheTwoActionsExceptTheLastOne=Alle Übergänge zwischen den zwei Aktionen außer dem letzten entfernen
 MostDslQuickfixProvider.RemoveColourFlag=Das colour-Flag entfernen
 MostDslQuickfixProvider.RemoveCountryFlag=Das country-Flag entfernen
+MostDslQuickfixProvider.RemoveTheDbName=Den DB Namen entfernen
 MostDslQuickfixProvider.RemoveDeleteActionFromTheController=Die Delete-Aktion vom Controller '{0}' entfernen
 MostDslQuickfixProvider.RemoveGeographicalFlag=Das geographical-Flag entfernen
 MostDslQuickfixProvider.RemoveLanguageFlag=Das language-Flag entfernen
@@ -373,7 +374,6 @@ MostDslQuickfixProvider.RemoveTheLayoutOrderElement=Das Layout Order Element ent
 MostDslQuickfixProvider.RemoveTheOutgoingOneToManyRelationship=Die ausgehende Eins-zu-Viele-Beziehung entfernen
 MostDslQuickfixProvider.RemoveTheRelation=Die Beziehung entfernen
 MostDslQuickfixProvider.RemoveTheRelationship=Die Beziehung entfernen
-MostDslQuickfixProvider.RemoveTheUnrequiredGeographicalField=Das unbenötigte geographical-Feld entfernen
 MostDslQuickfixProvider.RemoveTheUnrequiredSlugField=Das unbenötigte slug-Feld entfernen
 MostDslQuickfixProvider.RemoveUniqueFlag=Das unique-Flag entfernen
 MostDslQuickfixProvider.RemoveVersionFlag=Das version-Flag entfernen
