--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -343,6 +343,8 @@ _UI_Entity_softDeleteable_feature = Soft Deleteable
 _UI_Entity_softDeleteable_description = Ob gelöschte Einträge nur als gelöscht markiert werden sollen anstatt sie zu löschen.
 _UI_EntityField_entity_feature = Entität
 _UI_EntityField_entity_description = Entität, die dieses Feld enthält.
+_UI_DerivedField_dbName_feature = DB Name
+_UI_DerivedField_dbName_description = Name der durch dieses Feld repräsentierten Datenbankspalte - verwendet per Standard den Feldnamen.
 _UI_DerivedField_defaultValue_feature = Standardwert
 _UI_DerivedField_defaultValue_description = Für dieses Feld zu benutzender Standardwert.
 _UI_DerivedField_mandatory_feature = Pflicht
